# skills

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  CURSOR.md  Makefile  README.md  marketplace.json  package.json  pyproject.toml  ruff.toml  skills-index.json
.claude-plugin/: marketplace.json
.codex/scripts/: install-for-codex.sh
.codex/skills/: adversarial-verification  audit-augmentation  c-review  claude-in-chrome-troubleshooting  diagram  genotoxic  (+14 more)
.opencode/: INSTALL.md  package-lock.json  package.json
assets/: hero.html
docs/: opencode.md
plugins/yara-authoring/skills/yara-rule-authoring/scripts/: atom_analyzer.py  pyproject.toml  yara_lint.py
scripts/: build-discovery.py  convert_to_cursor.py  install_opencode_skills.sh  validate_opencode_compat.py
skills/: address-sanitizer  aflpp  algorand-vulnerability-scanner  ask-questions-if-underspecified  atheris  audit-context-building  audit-prep-assistant  burp-suite  burpsuite-project-parser  cairo-vulnerability-scanner  cargo-fuzz  code-maturity-assessor  codeql  constant-time-analysis  constant-time-testing  cosmos-vulnerability-scanner  coverage-analysis  differential-review  dwarf-expert  entry-point-analyzer  fix-review  fuzzing-dictionary  fuzzing-obstacles  guidelines-advisor  harness-writing  interpreting-culture-index  libafl  libfuzzer  ossfuzz  property-based-testing  ruzzy  sarif-parsing  secure-workflow-guide  semgrep  semgrep-rule-creator  sharp-edges  solana-vulnerability-scanner  spec-to-code-compliance  substrate-vulnerability-scanner  testing-handbook-generator  (+4 more)
(+931 files in other folders)
